<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="21dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/tertiaryContainer"
        android:src="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/onTertiaryContainer"
        android:contentDescription="@string/btn_back" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="21dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/tertiaryContainer"
        android:src="@drawable/ic_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/onTertiaryContainer"
        android:contentDescription="@string/btn_save" />

    <TextView
        android:id="@+id/tvAddOrEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/title_edit"
        android:textSize="36sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPengusaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNamaPengusaha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_pengusaha"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutNamaUsaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutPengusaha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNamaUsaha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_nama_usaha"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutJenisUsaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutNamaUsaha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edJenisUsaha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_jenis"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutAlamatUsaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutJenisUsaha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edAlamatUsaha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_alamat"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutKodeUsaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutAlamatUsaha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edKodeInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_kode_input"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutNomorTelepon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutKodeUsaha">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edNomorTelepon"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_nomor_telepon"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutLokasiMaps"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutNomorTelepon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edLokasiMaps"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_maps"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutFotoUsaha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:boxBackgroundColor="@color/surface"
                    app:layout_constraintTop_toBottomOf="@id/inputLayoutLokasiMaps">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edFotoUsaha"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle"
                        android:backgroundTint="@color/background"
                        android:hint="@string/edit_foto_link"
                        android:textColor="@color/onBackground" />


                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>